Now loads fucking tags fuckity fuck god damn I'm good

--- a/PokemonMastersGuildSite/Views/News/Index.cshtml
+++ b/PokemonMastersGuildSite/Views/News/Index.cshtml
@@ -12,9 +12,7 @@
 <ol>
 @foreach (var item in ViewBag.bullshitTitles)
 {
-    <li>@item.postText : @foreach (var tag in
-                             item.newsStoryTags) 
-                             {@tag.tagName}</li>
+    <li>@item.postText : @foreach (var tag in item.newsStoryTags) {@tag.tagName}</li>
 
 }
 </ol>
