--- a/PokemonMastersGuildSite/Views/Shared/_Layout.cshtml
+++ b/PokemonMastersGuildSite/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Guild Roster", "Index", "GuildRoster")</li>
+                    <li>@Html.ActionLink("News", "Index", "News")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
