--- a/PokemonMastersGuildSite/Views/News/Index.cshtml
+++ b/PokemonMastersGuildSite/Views/News/Index.cshtml
@@ -6,6 +6,9 @@
     ViewBag.Title = "News";
 }
 
+<h1>News</h1>
+<input type="button" id="addNews" value="New Post" onclick="location.href = '@Url.Action("Create")'" />
+
 <div class="newsWrapper">
     @foreach(var post in ViewBag.posts)
     {
@@ -13,7 +16,7 @@
             <h3>@post.postTitle</h3>
             By @post.Username on @post.postDate
             <p>@post.postText</p>
-            <p class="newsTag">@foreach (var tag in post.newsStoryTags) { @tag.tagName }</p>
+            <p class="newsTag">Tags: @foreach (var tag in post.newsStoryTags) { @tag.tagName }</p>
         </div>
     }
 </div>
