--- a/PokemonMastersGuildSite/Views/News/Create.cshtml
+++ b/PokemonMastersGuildSite/Views/News/Create.cshtml
@@ -2,9 +2,78 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link href="~/CSS/news.css" rel="stylesheet" type="text/css" />
-@{
-    ViewBag.Title = "News";
-}
+<link href="http://code.jquery.com/jquery-2.1.1.js" rel="prefetch" type="text/javascript" />
 
-<h1>News</h1>
-<input type="button" id="addNews" value="New Post" onclick="location.href = '@Url.Action("Create")'" />
+@{ ViewBag.Title = "News"; }
+<h1>Create News Post</h1>
+
+
+<script type="text/javascript">
+    function addTags() {
+        $('#newPostTagSelectionList option:selected').each(function () {
+            $('#newsPostTagsList').append($(this));
+        });
+    }
+
+    function removeTags() {
+        $('#newsPostTagsList option:selected').each(function () {
+            $('#newPostTagSelectionList').append($(this));
+        });
+    }
+
+    function postNews() {
+        title = $('#newsPostTitle').val();
+        post = $('#newsPostText').val();
+        tags = $('#newsPostTagsList').children().map(function () { return $(this).val(); }).get();
+        $.ajax({
+            type: "POST",
+            url: '@Url.Action("Create", "News")',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ 'postTitle': title, 'postText': post, 'tags': tags }),
+            cache: false,
+            traditional: true,
+            dataType: "json",
+            success: function (result) {
+                console.log(result);
+            },
+            error: function (result) {
+                console.log(result);
+            }
+        });
+    }
+</script>
+
+
+
+@using (Html.BeginForm("Create", "NewsController", FormMethod.Post, new { id = "newNewsPost" }))
+{
+    <form id="newNewsPost">
+        <div class="newsNewPostWrapper">
+            <p>
+                <label for="newsPostTitle" id="newsPostTitleLabel">Post Title</label>
+            </p>
+            <p>
+                <input type="text" id="newsPostTitle" />
+            </p>
+            <p>
+                <label for="newsPostText" id="newsPostTextLabel">Post Text</label>
+            </p>
+            <p>
+                <textarea id="newsPostText"></textarea>
+            </p>
+            <p>
+                <label id="newsPostTagsListLabel">Tags</label>
+            </p>
+            <p class ="tagSelectionArea">
+                <select id="newsPostTagsList" multiple="multiple" style="float: right;"></select>
+                @Html.ListBox("A Box", (IEnumerable<SelectListItem>)ViewBag.tags, new { id = "newPostTagSelectionList", style = "float: left;" })
+                <input value="-->" type="button" id="add" onclick="addTags()" class="newNewsPostButton" />
+                <input value="<--" type="button" id="remove" onclick="removeTags()" class="newNewsPostButton" />
+            </p>
+        </div>
+        <div class="newsNewPostWrapper" style="margin-top: 20px;">
+            <input value="Submit" type="button" id="Post" style="float: left;"
+                onclick="postNews()" />
+        </div>
+    </form>
+}
