--- a/PokemonMastersGuildSite/Views/News/Index.cshtml
+++ b/PokemonMastersGuildSite/Views/News/Index.cshtml
@@ -16,7 +16,10 @@
             <h3>@post.postTitle</h3>
             By @post.Username on @post.postDate
             <p>@post.postText</p>
-            <p class="newsTags">Tags: @foreach (var tag in post.newsStoryTags) { @tag.tagName }</p>
+            @if(@post.newsStoryTags.Count > 0)
+            {
+                <p class="newsTags">Tags: @foreach (var tag in post.newsStoryTags) { @tag.tagName }</p>
+            }
         </div>
     }
 </div>
