--- a/PokemonMastersGuildSite/CSS/news.css
+++ b/PokemonMastersGuildSite/CSS/news.css
@@ -20,5 +20,7 @@
     width: 70%;
     margin-left: 15%;
     text-align: center;
-    
+}
+.newsNewPostWrapper .chosen-container-multi .chosen-choices li.search-field input[type="text"] {
+    height: 25px !important;
 }
