--- a/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
+++ b/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
@@ -25,13 +25,18 @@
         }).sort(function (a, b) {
             return a.Rank - b.Rank;
         });
+
         ko.applyBindings({
             guildMembers: mappedMembers
         });
     }
+
+    $('body').on('hidden.bs.modal', '.modal', function () {
+        $(this).removeData('bs.modal');
+    });
 </script>
 
-<table>
+<table class="table table-hover">
     <thead>
         <tr>
             <th>Character Name</th>
@@ -41,18 +46,43 @@
     <tbody data-bind="foreach: guildMembers">
         <tr>
             <td><a id="aPlayer" data-toggle="modal" data-target="#myModal"
-                   data-bind="attr: {href: memberUrl}, text: Name"></a></td>
+                   data-bind="click: Name, text: Name"></a></td>
             <td data-bind="text: getRankName(Rank)"></td>
         </tr>
     </tbody>
 </table>
 
 <div id="myModal" class="modal hide fade">
+    <script type="text/javascript">
+        $.ajax({
+            type: "GET",
+            url: 'http://us.battle.net/api/wow/character/Blackrock/' + GetQueryStringParams("name") + '?fields=items,professions,progression,stats,talents&jsonp=getPlayer',
+            dataType: "JSONP"
+        });
+
+        function getPlayer(player) {
+            console.log(player);
+            ko.applyBindings({
+                Name: player.name,
+                Pic: "http://us.battle.net/static-render/us/" + player.thumbnail,
+                Class: player.class,
+                Race: player.race,
+                Stats: player.stats,
+                Talents: player.talents,
+                Progression: player.progression.raids[31].bosses,
+                Level: player.level,
+                ilvl: player.items.averageItemLevel,
+                Achives: player.achievementPoints
+            });
+        }
+    </script>
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> × </button>
         <h3 id="myModalLabel">Modal header</h3>
     </div>
     <div class="modal-body">
+        <img data-bind="attr: {src: Pic, alt: Name}" />
+        <img data-bind="attr: {src: getClassIcon(Class), alt: getClass(Class)}" />
     </div>
     <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
