--- a/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
+++ b/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
@@ -30,10 +30,6 @@
             guildMembers: mappedMembers
         });
     }
-
-    $('body').on('hidden.bs.modal', '.modal', function () {
-        $(this).removeData('bs.modal');
-    });
 </script>
 
 <table class="table table-hover">
@@ -46,7 +42,7 @@
     <tbody data-bind="foreach: guildMembers">
         <tr>
             <td><a id="aPlayer" data-toggle="modal" data-target="#myModal"
-                   data-bind="click: Name, text: Name"></a></td>
+                   data-bind="click: setPlayer(Name), text: Name"></a></td>
             <td data-bind="text: getRankName(Rank)"></td>
         </tr>
     </tbody>
@@ -54,11 +50,13 @@
 
 <div id="myModal" class="modal hide fade">
     <script type="text/javascript">
-        $.ajax({
-            type: "GET",
-            url: 'http://us.battle.net/api/wow/character/Blackrock/' + GetQueryStringParams("name") + '?fields=items,professions,progression,stats,talents&jsonp=getPlayer',
-            dataType: "JSONP"
-        });
+        function setPlayer(name) {
+            $.ajax({
+                type: "GET",
+                url: 'http://us.battle.net/api/wow/character/Blackrock/' + name + '?fields=items,professions,progression,stats,talents&jsonp=getPlayer',
+                dataType: "JSONP"
+            });
+        }
 
         function getPlayer(player) {
             console.log(player);
