Modal stuff working

--- a/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
+++ b/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
@@ -3,10 +3,10 @@
 }
 @Scripts.Render("~/Scripts/Knockout-3.2.0.js")
 @Scripts.Render("~/Scripts/guildUtils.js")
+@Styles.Render("~/CSS/guildroster.css")
 @{
     ViewBag.Title = "Guild Roster";
 }
-
 
 <script type="text/javascript">
     $.ajax({
@@ -15,74 +15,94 @@
         dataType: "JSONP"
     });
 
+    var vm;
+
+    function PlayerVM(player) {
+        this.tarPlayer = player !== undefined ? ko.observable(player.name) : ko.observable();
+        this.Pic = player !== undefined ? ko.observable("http://us.battle.net/static-render/us/" + player.thumbnail) : ko.observable();
+        this.Class = player !== undefined ? ko.observable(player.class) : ko.observable();
+        this.Race = player !== undefined ? ko.observable(player.race) : ko.observable();
+        this.Stats = player !== undefined ? ko.observable(player.stats) : ko.observable();
+        this.Talents = player !== undefined ? ko.observable(player.talents) : ko.observable();
+        this.Progression = player !== undefined ? ko.observable(player.progression.raids[31].bosses) : ko.observable();
+        this.Level = player !== undefined ? ko.observable(player.level) : ko.observable();
+        this.ilvl = player !== undefined ? ko.observable(player.items.averageItemLevel) : ko.observable();
+        this.Achives = player !== undefined ? ko.observable(player.achievementPoints) : ko.observable();
+    }
+
+    function viewModel(mappedMembers) {
+        this.guildMembers = mappedMembers;
+
+        this.bindPlayer = function(player) {
+            $.ajax({
+                type: "GET",
+                url: 'http://us.battle.net/api/wow/character/Blackrock/' + player.Name + '?fields=items,ptalentrofessions,progression,stats,s&jsonp=getPlayer',
+                dataType: "JSONP"
+            });
+        }
+
+        this.Player = ko.observable(new PlayerVM());
+    }
+
     function bindMembers(data) {
         var mappedMembers = $.map(data.members, function (member) {
             return {
                 Name: member.character.name,
-                Rank: member.rank,
-                memberUrl: "/Static/ViewPlayer.html?name=" + member.character.name
+                Rank: member.rank
             };
         }).sort(function (a, b) {
             return a.Rank - b.Rank;
         });
 
-        ko.applyBindings({
-            guildMembers: mappedMembers
-        });
+        vm = new viewModel(mappedMembers);
+        ko.applyBindings(vm);
     }
+
+    function getPlayer(player) {
+        console.log(player);
+        vm.Player(new PlayerVM(player));
+        $('#myModal').modal();
+    }
+
+    $(document).ready(function () {
+        $('#myModal').on('hidden.bs.modal', function () {
+            vm.Player(new PlayerVM());
+        });
+    })
 </script>
 
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>Character Name</th>
-            <th>Rank</th>
-        </tr>
-    </thead>
-    <tbody data-bind="foreach: guildMembers">
-        <tr>
-            <td><a id="aPlayer" data-toggle="modal" data-target="#myModal"
-                   data-bind="click: setPlayer(Name), text: Name"></a></td>
-            <td data-bind="text: getRankName(Rank)"></td>
-        </tr>
-    </tbody>
-</table>
+<div class="panel panel-default">
+    <div class="panel-heading"><h3 class="panel-title">Guild Roster</h3></div>
+        <table class="table table-hover table-striped table-border panel-body">
+            <thead>
+                <tr>
+                    <th>Character Name</th>
+                    <th>Rank</th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: guildMembers">
+                <tr>
+                    <td><a href="#" data-target="#myModal"  data-bind="click: $parent.bindPlayer, text: Name"></a></td>
+                    <td data-bind="text: getRankName(Rank)"></td>
+                </tr>
+            </tbody>
+        </table>
+</div>
 
-<div id="myModal" class="modal hide fade">
-    <script type="text/javascript">
-        function setPlayer(name) {
-            $.ajax({
-                type: "GET",
-                url: 'http://us.battle.net/api/wow/character/Blackrock/' + name + '?fields=items,professions,progression,stats,talents&jsonp=getPlayer',
-                dataType: "JSONP"
-            });
-        }
-
-        function getPlayer(player) {
-            console.log(player);
-            ko.applyBindings({
-                Name: player.name,
-                Pic: "http://us.battle.net/static-render/us/" + player.thumbnail,
-                Class: player.class,
-                Race: player.race,
-                Stats: player.stats,
-                Talents: player.talents,
-                Progression: player.progression.raids[31].bosses,
-                Level: player.level,
-                ilvl: player.items.averageItemLevel,
-                Achives: player.achievementPoints
-            });
-        }
-    </script>
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> × </button>
-        <h3 id="myModalLabel">Modal header</h3>
-    </div>
-    <div class="modal-body">
-        <img data-bind="attr: {src: Pic, alt: Name}" />
-        <img data-bind="attr: {src: getClassIcon(Class), alt: getClass(Class)}" />
-    </div>
-    <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="model-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> × </button>
+                <h3 id="myModalLabel" data-bind="text: Player().tarPlayer"></h3>
+            </div>
+            <div class="modal-body">
+                <img data-bind="attr: {src: Player().Pic, alt: Player().tarPlayer}" />
+                <img data-bind="attr: {src: getClassIcon(Player().Class()), alt: getClass(Player().Class())}" />
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+            </div>
+        </div>
     </div>
 </div>
