--- a/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
+++ b/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
@@ -33,7 +33,8 @@
     function viewModel(mappedMembers) {
         this.guildMembers = mappedMembers;
 
-        this.bindPlayer = function(player) {
+        this.bindPlayer = function (player) {
+            $('#loadingModal').modal();
             $.ajax({
                 type: "GET",
                 url: 'http://us.battle.net/api/wow/character/Blackrock/' + player.Name + '?fields=items,ptalentrofessions,progression,stats,s&jsonp=getPlayer',
@@ -61,6 +62,7 @@
     function getPlayer(player) {
         console.log(player);
         vm.Player(new PlayerVM(player));
+        $('#loadingModal').delay(400).modal('hide');
         $('#myModal').modal();
     }
 
@@ -105,4 +107,8 @@
             </div>
         </div>
     </div>
+</div>
+
+<div id="loadingModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+    <img src="~/Images/loading.gif" alt="Loading..." />
 </div>
