Click player now gives some cool stuff, need to get better with knockout

--- a/PokemonMastersGuildSite/Content/bootstrap/modals.less
+++ b/PokemonMastersGuildSite/Content/bootstrap/modals.less
@@ -9,7 +9,8 @@
 
 // Kill the scroll on the body
 .modal-open {
-  overflow: hidden;
+  /*Killing this shit stops it from shifting over when you open it god damn
+    overflow: hidden;*/
 }
 
 // Container that the modal scrolls within
