--- a/PokemonMastersGuildSite/Views/News/Create.cshtml
+++ b/PokemonMastersGuildSite/Views/News/Create.cshtml
@@ -33,6 +33,7 @@
                 console.log(result);
                 vm.postText("");
                 vm.postTitle("");
+                //Tags isn't being cleared
                 vm.tags([]);
             },
             error: function (result) {
